--- a/VMTemplate.cs.in
+++ b/VMTemplate.cs.in
@@ -4,13 +4,11 @@ using System.Collections.Generic;
 
 namespace DianaScript
 {
-
-
     using NameSpace = Dictionary<InternString, DObj>;
-    using static TOKEN;
-    using static VMHelper;
+    using static @__TOKEN;
+    using static @__VMHelper;
 
-    public static class VMHelper
+    public static class @__VMHelper
     {
         public static void check_argcount(DFunc f, int argcount)
         {
@@ -21,7 +19,7 @@ namespace DianaScript
             throw new ArgumentException($"{f_repr} takes expect {expect} arguments, got {argcount}.");
         }
     }
-    public enum TOKEN
+    public enum @__TOKEN
     {
         RETURN,
         GO_AHEAD,
@@ -29,30 +27,40 @@ namespace DianaScript
         LOOP_CONTINUE
     }
 
-    public partial class DirectRef
+    public struct @__MiniFrame
     {
-        public DObj cell_contents;
+        public int blockind;
+        public int offset;
+
+        public int metadataInd;
+
     }
 
-    public partial class DVM
+
+    public partial class @__DVM
     {
 
         // stack of (blockind, offset)
-        public Stack<(int, int)> errorFrames;
+        public Stack<@__MiniFrame> errorFrames;
 
         public DFlatGraphCode flatGraph;
 
-        public DVM(DFlatGraphCode flatGraph){
-            this.flatGraph = flatGraph;
-            this.errorFrames = new Stack<(int, int)>();
+        public static DFlatGraphCode FlatGraph; // should be the same as the instance field
 
+        public @__DVM(DFlatGraphCode flatGraph)
+        {
+            this.flatGraph = flatGraph;
+            DVM.FlatGraph = flatGraph;
+            this.errorFrames = new Stack<@__MiniFrame>();
         }
-        public DObj exec_func(DFunc dfunc, DObj[] vstack){
-            var executor = new BlockExecutor
+
+        public DObj exec_func(DFunc dfunc, DObj[] vstack)
+        {
+            var executor = new @__BlockExecutor
             {
                 virtual_machine = this,
                 offset = 0,
-                token = (int) TOKEN.GO_AHEAD,
+                token = (int)GO_AHEAD,
                 vstack = vstack,
                 cur_func = dfunc,
                 @return = null,
@@ -67,10 +75,10 @@ namespace DianaScript
 
 
     // like frame
-    public partial class BlockExecutor
+    public partial class @__BlockExecutor
     {
 
-        public DVM virtual_machine;
+        public @__DVM virtual_machine;
         public int offset;
         public int token;
         public DFunc cur_func;
@@ -80,8 +88,8 @@ namespace DianaScript
         public const int bit_global = 0b01 << 30;
         public const int bit_free = 0b01 << 31;
         public const int bit_nonlocal = bit_global & bit_free;
-        
-        DirectRef loadref(int slot)
+
+        DRef loadref(int slot)
         {
             return cur_func.freevals[slot];
         }
@@ -95,7 +103,13 @@ namespace DianaScript
         {
             if ((slot & bit_nonlocal) == 0)
             {
-                return vstack[slot];
+                var c = vstack[slot];
+                if (c == null)
+                {
+                    var name = flatGraph.funcmetas[cur_func.metadataInd].localnames[slot << 2 >> 2];
+                    throw new NullReferenceException($"undefined variable {name}.");
+                }
+                return c;
             }
             else if ((slot & bit_free) == 0)
             {
@@ -105,7 +119,13 @@ namespace DianaScript
             else
             {
                 // assert
-                return cur_func.freevals[slot << 2 >> 2].cell_contents;
+                var c = cur_func.freevals[slot << 2 >> 2].cell_contents;
+                if (c == null)
+                {
+                    var name = flatGraph.funcmetas[cur_func.metadataInd].freenames[slot << 2 >> 2];
+                    throw new NullReferenceException($"undefined cell variable {name}.");
+                }
+                return c;
             }
         }
 
@@ -157,14 +177,19 @@ namespace DianaScript
             {
                 for (var i = 0; i < codes.Length; i++)
                 {
+                    offset = i;
                     exec_code(codes[i]);
-                    if (token != (int)TOKEN.GO_AHEAD)
+                    if (token != (int)GO_AHEAD)
                         return;
                 }
             }
             catch
             {
-                virtual_machine.errorFrames.Push((blockind, offset));
+                virtual_machine.errorFrames.Push(new @__MiniFrame { 
+                    metadataInd = cur_func.metadataInd,
+                    blockind = blockind,
+                    offset = offset
+                });
                 throw;
             }
         }
