--- a/src/CodeLoader.cs.in
+++ b/src/CodeLoader.cs.in
@@ -114,7 +114,7 @@ namespace DianaScript
 
             while (offset < codes.Length)
             {
-                var code = (int) binaryReader.ReadByte();
+                var code = (int) ReadInt();
                 codes[offset++] = code;
                 switch ((CODETAG)  code)
                 {
@@ -141,10 +141,9 @@ namespace DianaScript
 
         private static readonly object _loaderSync = new object();
 
-        public (int, int) LoadCode()
+        public int LoadCode()
         {
-            var metadataInd = ReadInt();
-            var blockInd = ReadInt();    
+            var metadataIndForEntryPoint = ReadInt();
             lock(_loaderSync)
             {
                 {% for defi in defs if not defi.is_bytecode %}
@@ -154,7 +153,7 @@ namespace DianaScript
                     Num_{{defi.name.lower()}}s = {{defi.name.lower()}}s.Count;
                 {% endfor %}
             }
-            return (metadataInd, blockInd);
+            return metadataIndForEntryPoint;
         }
 
         {% for type in ARR_TYPES %}
